--- a/src/main/resources/templates/lesson04/afterAddStudent.html
+++ b/src/main/resources/templates/lesson04/afterAddStudent.html
@@ -15,6 +15,7 @@
 		<table class="table">
 			<tr>
 				<th>번호</th>
+				<!-- Student의 필드명과 같게 해야함. -->
 				<td th:text="${student.id}"></td>
 			</tr>
 			<tr>
